[project]
name = "ug_nerf"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["ug_nerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
ug_nerf = 'ug_nerf.template_config:method_template'

# export NERFSTUDIO_METHOD_CONFIGS="ug_nerf=ug_nerf.template_config:method_template"